// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render all tabs correctly 1`] = `
<Fragment>
  <BoxedTabs
    className="branch-like-tabs"
    onSelect={[Function]}
    selected={0}
    tabs={
      Array [
        Object {
          "key": 0,
          "label": <React.Fragment>
            <BranchIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.branches
            </span>
          </React.Fragment>,
        },
        Object {
          "key": 1,
          "label": <React.Fragment>
            <PullRequestIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.pull_requests
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <Memo(BranchLikeTable)
    branchLikes={
      Array [
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        },
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-1",
        },
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-11",
        },
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-12",
        },
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-2",
        },
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-3",
        },
      ]
    }
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "organization": "foo",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    displayPurgeSetting={true}
    onDelete={[Function]}
    onRename={[Function]}
    title="project_branch_pull_request.table.branch"
  />
</Fragment>
`;

exports[`should render all tabs correctly 2`] = `
<Fragment>
  <BoxedTabs
    className="branch-like-tabs"
    onSelect={[Function]}
    selected={1}
    tabs={
      Array [
        Object {
          "key": 0,
          "label": <React.Fragment>
            <BranchIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.branches
            </span>
          </React.Fragment>,
        },
        Object {
          "key": 1,
          "label": <React.Fragment>
            <PullRequestIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.pull_requests
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <Memo(BranchLikeTable)
    branchLikes={
      Array [
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1",
          "target": "master",
          "title": "PR-1",
        },
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "2",
          "target": "master",
          "title": "PR-2",
        },
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "isOrphan": true,
          "key": "2",
          "target": "llb-100",
          "title": "PR-2",
        },
      ]
    }
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "organization": "foo",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    displayPurgeSetting={false}
    onDelete={[Function]}
    onRename={[Function]}
    title="project_branch_pull_request.table.pull_request"
  />
</Fragment>
`;

exports[`should render deletion modal correctly 1`] = `
<DeleteBranchModal
  branchLike={
    Object {
      "analysisDate": "2018-01-01",
      "base": "master",
      "branch": "feature/foo/bar",
      "key": "1001",
      "target": "master",
      "title": "Foo Bar feature",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "organization": "foo",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  onClose={[Function]}
  onDelete={[Function]}
/>
`;

exports[`should render renaming modal correctly 1`] = `
<RenameBranchModal
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "organization": "foo",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  onClose={[Function]}
  onRename={[Function]}
/>
`;
